# OGLE

./: README.md
converter/: .gitignore  CMakeLists.txt
converter/converter/: converter.cpp
converter/converter/core/: config.h  converter.cc  converter.h  op_converter.cc  op_converter.h  optimizer.cc  optimizer.h  registry.cc  registry.h  utils.cc  utils.h
converter/converter/graph/: graph.cc  graph.h  graph_constructor.cc  graph_constructor.h
converter/converter/onnx/: onnx_converter.cc  onnx_converter.h  onnx_utils.cc  onnx_utils.h
converter/converter/onnx/ops/: avepool.cc  batchnorm.cc  binary.cc  clip.cc  concat.cc  const.cc  conv2d.cc  flatten.cc  gather.cc  gemm.cc  maxpool.cc  relu.cc  reshape.cc  shape.cc  transpose.cc  unsqueeze.cc
converter/converter/optimizers/: op_types.cc  op_types.h  remapper.cc  remapper.h
converter/converter/test/: generate_model.py  torch_conv.py  torch_nn.py
ogl_runtime/: .gitignore  CMakeLists.txt  TODO.md
ogl_runtime/cmake/: Protobuf.cmake
ogl_runtime/cmake/Modules/: FindGlog.cmake
ogl_runtime/opengl/core/: allocator.cc  allocator.h  allocator_test.cc  buffer.cc  buffer.h  buffer_base.cc  buffer_base.h  buffer_test.cc  context.cc  context.h  context_test.cc  cpu_allocator_impl.cc  cpu_functor.cc  cpu_functor.h  dlxnet.proto  driver.cc  driver.h  error_codes.proto  fbo_session.cc  fbo_session.h  functor.cc  functor.h  functor_test.cc  init.cc  init.h  kernel.cc  kernel.h  kernel_registry.cc  kernel_registry.h  metric.cc  metric.h  ogl_allocator.cc  ogl_allocator.h  opengl.h  pool_allocator.cc  pool_allocator.h  program.cc  program.h  program_set.cc  program_set.h  (+24 more)
ogl_runtime/opengl/core/lib/monitor/: collected_metrics.h  collection_registry.cc  collection_registry.h  counter.h  metric_def.h
ogl_runtime/opengl/examples/: CMakeLists.txt
ogl_runtime/opengl/examples/label_image/: classify.py  main.cc
ogl_runtime/opengl/examples/ssd/: README.md  common.cc  common.h  detector.cc  detector.h  main.cc
ogl_runtime/opengl/nn/: CMakeLists.txt  main.cc  makeshader.py  profile_main.cc
ogl_runtime/opengl/nn/apis/: nn_ops.cc  nn_ops.h
ogl_runtime/opengl/nn/glsl/: any4_to_any.glsl  any_to_any4.glsl  any_to_nhwc4.glsl  batchnorm.glsl  batchnorm_any4.glsl  binary.glsl  clip.glsl  concat.glsl  concat_multi.glsl  conv2d.glsl  conv2d_any4.glsl  conv2d_dw.glsl  conv2d_dw_any4.glsl  conv2d_grp.glsl  conv2d_pw.glsl  conv2d_pw_any4.glsl  decoder.glsl  flatten.glsl  flatten_any4.glsl  gather.glsl  gemm.glsl  hwn4c4_to_nchw.glsl  layout_test.glsl  nchw_to_hwn4c4.glsl  nhwc4_to_any.glsl  nhwc4_to_any4.glsl  nms.glsl  pool.glsl  pool_any4.glsl  relu.glsl  reshape.glsl  reshape_any4.glsl  transpose.glsl  transpose_any4.glsl  unsqueeze.glsl
ogl_runtime/opengl/nn/kernels/: batchnorm.cc  batchnorm.h  binary.cc  binary.h  clip.cc  clip.h  clip_test.cc  concat.cc  concat.h  concat_test.cc  const.cc  const.h  const_test.cc  conv2d.cc  conv2d.h  conv2d_test.cc  decoder.cc  decoder.h  flatten.cc  flatten.h  flatten_test.cc  gather.cc  gather.h  gemm.cc  gemm.h  gemm_test.cc  kernel_test_utils.cc  kernel_test_utils.h  kernel_test_utils_test.cc  pool.cc  pool.h  relu.cc  relu.h  reshape.cc  reshape.h  reshape_test.cc  shape.cc  shape.h  shape_test.cc  transpose.cc  (+4 more)
ogl_runtime/opengl/nn/optimizer/: README.md
ogl_runtime/opengl/nn/profiler/: README.md  device_tracer.cc  host_tracer.cc  host_tracer_test.cc  host_tracer_utils.cc  host_tracer_utils.h  profiler.cc  profiler.h  profiler_interface.cc  profiler_interface.h  profiler_session.cc  profiler_session.h  profiler_utils.cc  profiler_utils.h  traceme.h  traceme_recorder.cc  traceme_recorder.h
ogl_runtime/opengl/test/: CMakeLists.txt  test.cc  test.h
ogl_runtime/opengl/utils/: abi.cc  abi.h  env.cc  env.h  env_time.cc  env_time.h  errors.h  logging.h  macros.cc  macros.h  mem.h  port.cc  protobuf.cc  protobuf.h  stacktrace.h  status.cc  status.h  status_test_util.h  strings.cc  strings.h  util.cc  util.h
ogl_runtime/scripts/: build_all.sh  build_protos.sh
